# fastapi_sample

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/dummy/: routes.py
app/ping/: routes.py
cmd/: run.sh
tests/: conftest.py  test_dummy.py  test_ping.py
