[tool.poetry]
name = "fastapi_sample"
version = "0.1.0"
description = "Just a fastapi sample with poetry"
authors = ["Alfonso Montilla <alfonso.montilla@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
pytest = "^7.1.2"
requests = "^2.27.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
